attempt 2 at fixing vertical alignment: added min and max width of 100% in statistics li css category

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2899,7 +2899,6 @@ input, select, textarea {
 		display: -ms-flex;
 		display: flex;
 		width: 100%;
-		max-width: 100%;
 		margin: 0 0 -0.75em 0;
 		padding: 0;
 		list-style: none;
@@ -2926,6 +2925,8 @@ input, select, textarea {
 			padding: 1.5em;
 			color: #ffffff;
 			text-align: center;
+			max-width: 100%;
+			min-width: 100%;
 		}
 
 			.statistics li.style1 {
